--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,18 @@ branches:
   only:
   - master
 
+before_install:
+# Configure Git
+- git config --global user.email "travis-ci@legalthings.net"
+- git config --global user.name "Travis CI"
+
+# Get all tags of git repo
+- git fetch origin 'refs/tags/*:refs/tags/*'
+
 script:
 - npm test
+
+after_success:
+# Bump version
+- npm install mversion -g
+- test "$TRAVIS_BRANCH" != 'master' -o "$TRAVIS_PULL_REQUEST" != "false" || test -n "$(git tag --contains)" || bin/bump-version
