--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   "homepage": "https://github.com/legalthings/document-merger-service#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "cors": "^2.8.5",
     "document-merger": "^1.0.4",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "express-winston": "^3.1.0",
+    "winston": "^3.2.1"
   },
   "devDependencies": {}
 }
